--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "serg.tkachenko@hotmail.com",
   "license": "ISC",
   "dependencies": {
+    "buffer-replace": "^1.0.0",
+    "connect": "^3.6.5",
     "express": "^4.14.0",
+    "harmon": "^1.3.2",
+    "http-proxy": "git+https://github.com/koumoul-dev/node-http-proxy.git#master",
     "iconv-lite": "^0.4.19",
+    "replacestream": "^4.0.3"
   }
 }
