--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "serg.tkachenko@hotmail.com",
   "license": "ISC",
   "dependencies": {
+    "brotli": "^1.3.2",
     "buffer-replace": "^1.0.0",
     "connect": "^3.6.5",
+    "detect-character-encoding": "^0.5.1",
     "express": "^4.14.0",
     "harmon": "^1.3.2",
     "http-proxy": "git+https://github.com/koumoul-dev/node-http-proxy.git#master",
