--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "dom-parser.2.0",
+  "name": "proxy resources",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "run": "node index.js"
   },
   "author": "serg.tkachenko@hotmail.com",
   "license": "ISC",
   "dependencies": {
     "brotli": "^1.3.2",
-    "buffer-replace": "^1.0.0",
     "connect": "^3.6.5",
-    "detect-character-encoding": "^0.5.1",
     "express": "^4.14.0",
     "harmon": "^1.3.2",
     "http-proxy": "git+https://github.com/koumoul-dev/node-http-proxy.git#master",
-    "iconv-lite": "^0.4.19",
-    "replacestream": "^4.0.3"
+    "iconv-lite": "^0.4.19"
   }
 }
