--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "run": "node index.js"
+    "run": "node index.js",
+    "test": "jasmine"
   },
   "author": "serg.tkachenko@hotmail.com",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "express": "^4.14.0",
     "harmon": "^1.3.2",
     "http-proxy": "git+https://github.com/koumoul-dev/node-http-proxy.git#master",
-    "iconv-lite": "^0.4.19"
+    "iconv-lite": "^0.4.19",
+    "jasmine": "^2.9.0"
   }
 }
