--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "brotli": "^1.3.2",
+    "cheerio": "^1.0.0-rc.2",
     "connect": "^3.6.5",
     "express": "^4.14.0",
     "harmon": "^1.3.2",
